Trying to fix the borders around the colors as well as the contrast error i am getting

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     background-color: #000;
     color:white;
     margin: 20px auto 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
 /*Style of the <h1> heading*/
@@ -42,7 +42,7 @@ div {
 }
 
 /*Styling the intro class*/
-.instroduction {
+.introduction {
     border-radius: 15px;
     margin-top: 15px;
     line-height: 2;
@@ -54,7 +54,7 @@ div {
     text-align: right;
     margin-left: 50px;
     border-bottom: 2px solid black;
-    border-left: 5px solid black;
+    border-right: 5px solid black;
 }
 
 /*Blue class style*/
@@ -62,8 +62,8 @@ div {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid black;
-    border-top: 2px solid black;
+    border-left: 5px solid black;
+    border-bottom: 2px solid black;
     color: #c4c4c4;
 }
 
@@ -72,8 +72,8 @@ div {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid black;
-    border-left: 5px solid black;
+    border-top: 2px solid black;
+    border-right: 5px solid black;
     color: #707070
 }
 
@@ -82,7 +82,7 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid black;
+    border-left: 5px solid black;
     border-top: 2px solid black;
 }
 
